[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wzhmultimap"
version = "0.0.6"
dependencies = []
authors = [{name="wangzhaohan2910", email="wangcf3000@sina.com"}]
description = "The Multimap in Python"
readme = "README.rst"
requires-python = ">=3.3"
classifers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/wangzhaohan2910/multimap"
